[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scenes/Scripts/TitleScreen.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Theme/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/Buttons/Play_Button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Buttons/Options_Button.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Fade_to_Black.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/Music/samurai_western_start_menu.ogg" type="AudioStream" id=6]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="menu" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 5.0
margin_right = 56.0
margin_bottom = 59.0

[node name="title" type="Label" parent="menu"]
margin_right = 48.0
margin_bottom = 6.0
theme = ExtResource( 2 )
text = "LowRez"
align = 1

[node name="main_options" type="HBoxContainer" parent="menu"]
margin_top = 10.0
margin_right = 48.0
margin_bottom = 54.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="buttons_container" type="VBoxContainer" parent="menu/main_options"]
margin_right = 48.0
margin_bottom = 44.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Play_Button" parent="menu/main_options/buttons_container" instance=ExtResource( 3 )]
margin_top = 12.0
margin_bottom = 32.0
size_flags_horizontal = 1
size_flags_vertical = 1
scene_to_load = "res://Scenes/Game.tscn"

[node name="Options_Button" parent="menu/main_options/buttons_container" instance=ExtResource( 4 )]
visible = false
margin_top = 24.0
margin_bottom = 44.0
size_flags_horizontal = 1
size_flags_vertical = 1
scene_to_load = "res://Scenes/Options.tscn"

[node name="Fade_to_Black" parent="." instance=ExtResource( 5 )]
visible = false

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -20.0
autoplay = true

[node name="tween" type="Tween" parent="."]
[connection signal="fade_finished" from="Fade_to_Black" to="." method="_on_fade_to_black_fade_finished"]
[connection signal="tween_completed" from="tween" to="." method="_on_tween_tween_completed"]
